# NanoSimLab

./: .env.example  .gitignore  .gitignore_updated  CONTRIBUTING.md  DOCKER_SETUP.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
.copilot/: config.py
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
data/: README.md  simulation_presets.toml
docs/: docker.md  project_plan.md
scripts/: benchmark.py  setup_dev.py  test_docker_setup.py
src/nanosimlab/: __init__.py  analysis.py  api.py  cli.py  integrators.py  potentials.py  system.py
tests/: test_basic.py
